sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/IsnotExpression.sand
pub class IsnotExpression {
    foo() {
        [
            x() isnot Foo,
            x() isnot Foo[],
            x() isnot Foo[][],
            x() isnot Foo[][][],

            x() isnot Foo?,
            x() isnot Foo[]?,
            x() isnot Foo[][]?,
            x() isnot Foo[][][]?,
        ]
    }
}