sandc/test/fixtures/astRegression/shouldFail/productions/instanceofExpression/List.sand
pub class List {
    foo() {
        x() instanceof Foo[+]
    }
}